New ore types added/ingots/dust/nuggets

--- a/src/main/resources/assets/mangotechores/lang/en_us.json
+++ b/src/main/resources/assets/mangotechores/lang/en_us.json
@@ -1,10 +1,43 @@
 {
   "item.mangotechores.tin_ingot": "Tin Ingot",
   "item.mangotechores.tin_nugget": "Tin Nugget",
+  "item.mangotechores.tin_dust": "Tin Dust",
 
+
+  "item.mangotechores.bronze_ingot": "Bronze Ingot",
+  "item.mangotechores.bronze_dust": "Bronze Dust",
+  "item.mangotechores.bronze_nugget": "Bronze Nugget",
+
+
+  "item.mangotechores.aquamarine": "Aquamarine",
+  "item.mangotechores.apatite": "Apatite",
+  "item.mangotechores.topaz": "Topaz",
+
+
+  "block.mangotechores.tin_ore": "Tin Ore",
+  "block.mangotechores.deepslate_tin_ore": "Deepslate Tin Ore",
   "block.mangotechores.tin_block": "Tin Block",
+
+
   "block.mangotechores.bronze_block": "Bronze Block",
 
+
+  "block.mangotechores.apatite_ore": "Apatite Ore",
+  "block.mangotechores.deepslate_apatite_ore": "Deepslate Apatite Ore",
+  "block.mangotechores.apatite_block": "Apatite Block",
+
+
+  "block.mangotechores.aquamarine_ore": "Aquamarine Ore",
+  "block.mangotechores.deepslate_aquamarine_ore": "Deepslate Aquamarine Ore",
+  "block.mangotechores.aquamarine_block": "Aquamarine Block",
+
+
+  "block.mangotechores.topaz_ore": "Topaz Ore",
+  "block.mangotechores.deepslate_topaz_ore": "Deepslate Topaz Ore",
+  "block.mangotechores.topaz_block": "Topaz Block",
+
+
   "itemGroup.mangotechores": "Mango Tech Ores",
-  "itemGroup.mangotechblocks": "Mango Tech Blocks"
+  "itemGroup.mangotechblocks": "Mango Tech Blocks",
+  "itemGroup.mangotechingots": "Mango Tech Ingots"
 }
